# Miktos-DMO

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Documentation/: DMO_Phase1_Completion.md  DMO_Phase2_ImplementationPlan.md  DMO_Phase2_Research_Architecture.md
Documentation/files-1/: DMO_Project_Research_Document_v1.1.docx
dmo-app/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
dmo-app/src/: App.svelte  app.css
dmo-app/src-tauri/: Cargo.toml  tauri.conf.json
dmo-app/src-tauri/capabilities/: default.json
dmo-app/src-tauri/src/: lib.rs  main.rs
dmo-app/src/lib/: Treemap.svelte  d3-voronoi-treemap.d.ts  types.ts
dmo-app/src/lib/sim/: PhysarumSim.ts  chemoattractant.ts
dmo-cli/: Cargo.toml
dmo-cli/src/: main.rs
dmo-core/: Cargo.toml
dmo-core/src/: classifier.rs  db.rs  lib.rs  pipeline.rs  scanner.rs  scorer.rs  types.rs
