[package]
name = "dmo-core"
version.workspace = true
edition.workspace = true

[dependencies]
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
log = "0.4"
